feat: attempt keyboard access

--- a/css/modal.css
+++ b/css/modal.css
@@ -140,6 +140,10 @@ main {
   font-family: var(--font-slab);
 }
 
+.successModal:target {
+  display: block;
+}
+
 /* Modal form */
 
 .button {
@@ -160,7 +164,7 @@ main {
   font-size: 16px;
 }
 
-.bground {
+.modal {
   display: none;
   position: fixed;
   z-index: 1;
@@ -172,7 +176,7 @@ main {
   background-color: rgba(26, 39, 156, 0.4);
 }
 
-.content {
+.modal-content {
   margin: 5% auto;
   width: 100%;
   max-width: 500px;
@@ -340,7 +344,7 @@ input[data-error]::after {
   left: 21%;
   top: 19%;
 }
-.close {
+.modal-close {
   position: absolute;
   right: 15px;
   top: 15px;
@@ -350,8 +354,8 @@ input[data-error]::after {
   cursor: pointer;
   transform: scale(0.7);
 }
-.close:before,
-.close:after {
+.modal-close:before,
+.modal-close:after {
   position: absolute;
   left: 15px;
   content: ' ';
@@ -359,10 +363,10 @@ input[data-error]::after {
   width: 3px;
   background-color: #fff;
 }
-.close:before {
+.modal-close:before {
   transform: rotate(45deg);
 }
-.close:after {
+.modal-close:after {
   transform: rotate(-45deg);
 }
 .btn-submit,
