--- a/css/modal.css
+++ b/css/modal.css
@@ -29,45 +29,88 @@ p {
 
 img {
   padding-right: 1rem;
+  width: 100%;
+  /* width: 70vw; */
+  height: auto;
   object-fit: cover;
 }
 
 .topnav {
   overflow: hidden;
   margin: 3.5%;
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+  flex-wrap: wrap;
 }
 .header-logo {
-  float: left;
+  /* width: clamp(80%, 80% - 30vw, 50%); */
+  /* float: left; */
 }
 .main-navbar {
-  float: right;
+  /* padding-top: clamp(0.5rem, 0.5rem + 3vw, 3rem); */
+  /* float: right; */
+  /* width: 20%; */
 }
 .topnav a {
   float: left;
-  display: block;
-  color: #000000;
+  display: none;
+  /* color: #000000; */
+  color: red;
   text-align: center;
   padding: 12px 12px;
-  margin: 5px;
+  /* margin: 5px; */
   text-decoration: none;
-  font-size: 20px;
+  /* font-size: 20px; */
   font-family: Roboto, sans-serif;
 }
 
-.topnav a:hover {
+.topnav a:hover:not(.icon) {
   background-color: #ff0000;
   color: #ffffff;
   border-radius: 15px;
 }
 
-.topnav a.active {
+.topnav a.active:not(.icon) {
   background-color: #ff0000;
   color: #ffffff;
   border-radius: 15px;
 }
 
 .topnav .icon {
-  display: none;
+  display: block;
+  /* padding: clamp(2px, 0px + 2.2vw, 16px); */
+  /* padding: 7px; */
+}
+
+.topnav .icon:focus {
+  color: #fff;
+}
+
+.topnav .fa-2x {
+  font-size: clamp(1rem, 0.5rem + 5vw, 4rem);
+}
+.topnav.responsive {
+  position: relative;
+}
+.topnav.responsive .icon {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.topnav.responsive a {
+  float: none;
+  display: block;
+  text-align: left;
+}
+
+/* @media screen and (max-width: 540px) {
+  .topnav a.icon {
+    margin-top: 0px;
+  }
+  #successModal h1 {
+    width: 90%;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -78,9 +121,6 @@ img {
     float: right;
     display: block;
   }
-}
-
-@media screen and (max-width: 768px) {
   .topnav.responsive {
     position: relative;
   }
@@ -94,18 +134,7 @@ img {
     display: block;
     text-align: left;
   }
-}
-
-@media screen and (max-width: 540px) {
-  .topnav a {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-    margin-top: -15px;
-  }
-}
+} */
 
 main {
   font-size: 130%;
@@ -139,6 +168,43 @@ main {
   margin: 20px;
   padding: 10px;
   font-family: var(--font-slab);
+}
+
+#successModal .modal-content {
+  margin: 5% auto;
+  width: 100%;
+  max-width: 500px;
+  animation-name: modalopen;
+  animation-duration: var(--modal-duration);
+  background: #232323;
+  border-radius: 10px;
+  overflow: hidden;
+  position: relative;
+  color: #fff;
+  padding-top: 10px;
+  height: 100%;
+  max-height: 650px;
+}
+
+#successModal .modal-body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+}
+
+#successModal h1 {
+  max-width: 85%;
+  font-size: 2rem;
+  text-align: center;
+  /* margin: 0 auto; */
+  margin-top: auto;
+}
+
+#successModal button {
+  margin-top: auto;
+  margin-bottom: 20px;
 }
 
 .successModal:target {
@@ -210,22 +276,18 @@ input {
   padding: 8px;
   border: 2px solid #ccc;
   outline: none;
-  position: relative;
 }
-.formData {
+.fa-icon {
   position: relative;
 }
 .formData i {
   position: absolute;
-  top: 50px;
-  right: 40px;
+  top: -35px;
+  right: 35px;
   visibility: hidden;
 }
 .formData small {
   font-size: 0.9rem;
-  /* position: absolute; */
-  /* bottom: -20px; */
-  /* left: 0; */
 }
 .formData.valid input {
   border-color: #28a745;
@@ -245,7 +307,7 @@ input {
   visibility: hidden;
 }
 .formData.invalid small {
-  font-size: 1rem;
+  font-size: 0.8rem;
   color: #f00;
   visibility: visible;
 }
@@ -377,10 +439,13 @@ input[data-error]::after {
   margin: 0 auto;
   border-radius: 7px;
   font-size: 1rem;
-  padding: 12px 82px;
+  padding: 12px;
   color: #fff;
   cursor: pointer;
   border: 0;
+  width: max(50%, 100px);
+  /* width: 150px; */
+  /* width: max(100%, 150px); */
 }
 /* custom select styles */
 .custom-select {
@@ -454,14 +519,10 @@ input[data-error]::after {
   font-size: 16px;
 }
 .hero-section {
-  min-height: 93vh;
-  border-radius: 10px;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  overflow: hidden;
-  box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
-  margin-bottom: 10px;
+  display: block;
+  box-shadow: unset;
 }
+/* 
 .hero-content {
   padding: 51px 67px;
   grid-column: span 4;
@@ -469,42 +530,39 @@ input[data-error]::after {
   color: #fff;
   position: relative;
   text-align: left;
-  min-width: 424px;
-}
-.hero-content::after {
-  content: '';
-  width: 100%;
-  height: 100%;
-  background: #232323;
-  position: absolute;
-  right: -80px;
-  top: 0;
+} */
+.hero-content {
+  background: #fff;
+  color: #000;
+  padding: 20px;
 }
 .hero-content > * {
   position: relative;
   z-index: 1;
 }
+.hero-content::after {
+  content: unset;
+}
 .hero-headline {
-  font-size: 6rem;
-  font-weight: normal;
-  white-space: nowrap;
+  /* font-size: 4.5rem; */
+  white-space: normal;
+  font-weight: 600;
+  font-size: clamp(1.8rem, 1.6rem + 4vw, 4.5rem);
 }
 .hero-text {
-  width: 146%;
-  font-weight: normal;
-  margin-top: 57px;
-  padding: 0;
+  width: unset;
+  font-size: 1.5rem;
 }
-.btn-signup {
-  outline: none;
-  text-transform: capitalize;
+.hero-content .btn-signup {
+  display: none;
   font-size: 1.3rem;
   padding: 15px 23px;
   margin: 0;
   margin-top: 59px;
 }
-.hero-img {
-  grid-column: span 8;
+.hero-img img {
+  border-radius: 10px;
+  margin-top: 40px;
 }
 .hero-img img {
   width: 100%;
@@ -512,22 +570,106 @@ input[data-error]::after {
   display: block;
   padding: 0;
 }
+.hero-section > .btn-signup {
+  display: block;
+  margin: 32px auto 10px;
+  padding: 12px 35px;
+}
 .copyrights {
   color: #fe142f;
   padding: 0;
   font-size: 1rem;
-  margin: 60px 0 30px;
+  margin: 50px 0 30px;
   font-weight: bolder;
-}
-.hero-section > .btn-signup {
-  display: none;
+  text-align: center;
 }
 footer {
   padding-left: 2vw;
   padding-right: 2vw;
   margin: 0 20px;
 }
-@media screen and (max-width: 800px) {
+@media screen and (min-width: 768px) {
+}
+@media screen and (min-width: 980px) {
+  .topnav {
+    flex-wrap: nowrap;
+  }
+  .topnav a {
+    display: block;
+    color: #000000;
+    padding: 6px;
+    margin: 5px;
+    text-decoration: none;
+    font-size: 1.2rem;
+  }
+  .topnav a:focus-within {
+    display: none;
+  }
+  .topnav a.icon {
+    display: none;
+  }
+  .hero-section {
+    min-height: 93vh;
+    border-radius: 10px;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    overflow: hidden;
+    box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
+    margin-bottom: 10px;
+  }
+  .hero-content {
+    padding: 51px 67px;
+    grid-column: span 4;
+    background: #232323;
+    color: #fff;
+    position: relative;
+    text-align: left;
+    /* min-width: 424px; */
+  }
+  .hero-content::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: #232323;
+    position: absolute;
+    right: -80px;
+    top: 0;
+  }
+  .hero-headline {
+    font-size: 6rem;
+    font-weight: normal;
+    white-space: nowrap;
+  }
+  .hero-text {
+    width: 146%;
+    font-weight: normal;
+    margin-top: 57px;
+    padding: 0;
+  }
+  .hero-content .btn-signup {
+    display: block;
+    outline: none;
+    /* text-transform: capitalize; */
+    font-size: 1.3rem;
+    padding: 15px 23px;
+    margin: 0;
+    margin-top: 59px;
+  }
+  .hero-img {
+    grid-column: span 8;
+  }
+  .hero-section > .btn-signup {
+    display: none;
+  }
+  .copyrights {
+    margin-top: 60px;
+    text-align-last: left;
+  }
+}
+/* @media screen and (max-width: 980px) {
+  .topnav a {
+    padding: 12px clamp(6px, 5px + 3vw, 12px);
+  }
   .hero-section {
     display: block;
     box-shadow: unset;
@@ -539,6 +681,10 @@ footer {
   }
   .hero-content::after {
     content: unset;
+  }
+  .hero-content h1 {
+    font-size: clamp(1.8rem, 1.6rem + 4vw, 4.5rem);
+    font-weight: 600;
   }
   .hero-content .btn-signup {
     display: none;
@@ -564,7 +710,7 @@ footer {
     margin-top: 50px;
     text-align: center;
   }
-}
+} */
 
 @keyframes modalopen {
   from {
