--- a/css/modal.css
+++ b/css/modal.css
@@ -3,7 +3,8 @@
   --font-slab: var(--font-default);
   --modal-duration: 0.8s;
 }
-* {
+*,
+*::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -14,12 +15,23 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  /* background-image: url("background.png"); */
   background: #e5e5e5;
   font-family: var(--font-default);
   font-size: 18px;
   max-width: 1300px;
   margin: 0 auto;
+}
+
+a {
+  text-decoration: none;
+}
+
+button {
+  border: 0;
+}
+
+ul {
+  list-style: none;
 }
 
 p {
@@ -30,122 +42,103 @@ p {
 img {
   padding-right: 1rem;
   width: 100%;
-  /* width: 70vw; */
   height: auto;
   object-fit: cover;
 }
 
 .topnav {
   overflow: hidden;
-  margin: 3.5%;
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
   flex-wrap: wrap;
 }
+
 .header-logo {
-  /* width: clamp(80%, 80% - 30vw, 50%); */
-  /* float: left; */
+  margin: 3.5%;
+  margin-bottom: 0;
 }
 .main-navbar {
-  /* padding-top: clamp(0.5rem, 0.5rem + 3vw, 3rem); */
-  /* float: right; */
-  /* width: 20%; */
+  display: flex;
+  flex-direction: column;
+  margin: 2%;
 }
+
 .topnav a {
-  float: left;
+  width: fit-content;
   display: none;
-  /* color: #000000; */
-  color: red;
+  color: #000000;
   text-align: center;
-  padding: 12px 12px;
-  /* margin: 5px; */
-  text-decoration: none;
-  /* font-size: 20px; */
+  padding: 0.75rem;
+  margin: 5px;
+  font-size: 20px;
   font-family: Roboto, sans-serif;
-}
-
-.topnav a:hover:not(.icon) {
-  background-color: #ff0000;
-  color: #ffffff;
-  border-radius: 15px;
-}
-
-.topnav a.active:not(.icon) {
-  background-color: #ff0000;
-  color: #ffffff;
-  border-radius: 15px;
-}
-
-.topnav .icon {
-  display: block;
-  /* padding: clamp(2px, 0px + 2.2vw, 16px); */
-  /* padding: 7px; */
-}
-
-.topnav .icon:focus {
-  color: #fff;
-}
-
-.topnav .fa-2x {
-  font-size: clamp(1rem, 0.5rem + 5vw, 4rem);
-}
-.topnav.responsive {
   position: relative;
 }
-.topnav.responsive .icon {
+
+.topnav a:hover,
+.topnav a:focus,
+.topnav a.active {
+  background-color: #ff0000;
+  color: #ffffff;
+  border-radius: 10px;
+}
+
+.topnav a:not(a.icon):hover::after,
+.topnav a:not(a.icon):focus::after,
+.topnav a.active:not(a.icon)::after {
+  content: '';
   position: absolute;
+  left: 0;
   right: 0;
-  top: 0;
+  height: 1px;
+  bottom: 8px;
+  width: 85%;
+  margin: 0 auto;
+  background-color: #fff;
+}
+
+.topnav a.icon {
+  display: block;
+  padding: clamp(0.2rem, 0.1rem + 1vw, 1rem);
+  font-size: clamp(1.8rem, 1.75rem + 2vw, 2.5rem);
+  color: red;
+  align-self: end;
+}
+
+.topnav a.icon:hover {
+  border-radius: 0.5rem;
+  color: white;
+}
+
+.topnav.responsive .main-navbar {
+  position: fixed;
+  top: clamp(4rem, 3.5rem + 4vw, 5rem);
+  left: 0;
+  right: 0;
+  z-index: 10;
+  height: calc(100vh - 6rem);
+  background-color: rgba(120, 120, 120, 97%);
+  border-radius: 0.5rem;
+  overflow-y: auto;
 }
 .topnav.responsive a {
-  float: none;
-  display: block;
+  display: flex;
+  flex-direction: column;
   text-align: left;
+  color: white;
 }
-
-/* @media screen and (max-width: 540px) {
-  .topnav a.icon {
-    margin-top: 0px;
-  }
-  #successModal h1 {
-    width: 90%;
-  }
+.topnav.responsive a.icon {
+  color: white;
+  background-color: red;
+  border-radius: 0.5rem;
 }
-
-@media screen and (max-width: 768px) {
-  .topnav a {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-  .topnav.responsive {
-    position: relative;
-  }
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-} */
-
 main {
   font-size: 130%;
   font-weight: bolder;
   color: black;
-  padding-top: 0.5vw;
-  padding-left: 2vw;
-  padding-right: 2vw;
-  margin: 1px 20px 15px;
+  padding: 0.5vw 2vw 0;
+  margin: 1vw 3vw;
   border-radius: 2rem;
-  text-align: justify;
 }
 
 .modal-btn {
@@ -171,26 +164,29 @@ main {
 }
 
 #successModal .modal-content {
-  margin: 5% auto;
-  width: 100%;
-  max-width: 500px;
+  margin: 3% auto;
   animation-name: modalopen;
   animation-duration: var(--modal-duration);
   background: #232323;
   border-radius: 10px;
   overflow: hidden;
-  position: relative;
+  position: absolute;
+  top: 4rem;
+  left: 0;
+  right: 0;
+  z-index: 5;
   color: #fff;
   padding-top: 10px;
+  width: 100%;
+  max-width: 500px;
   height: 100%;
-  max-height: 650px;
+  max-height: 600px;
 }
 
 #successModal .modal-body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
 }
 
@@ -198,7 +194,6 @@ main {
   max-width: 85%;
   font-size: 2rem;
   text-align: center;
-  /* margin: 0 auto; */
   margin-top: auto;
 }
 
@@ -244,15 +239,17 @@ main {
 }
 
 .modal-content {
-  margin: 5% auto;
+  margin: 3% auto;
   width: 100%;
   max-width: 500px;
   animation-name: modalopen;
   animation-duration: var(--modal-duration);
   background: #232323;
   border-radius: 10px;
-  overflow: hidden;
-  position: relative;
+  position: absolute;
+  top: 4rem;
+  left: 0;
+  right: 0;
   color: #fff;
   padding-top: 10px;
 }
@@ -287,7 +284,7 @@ input {
   visibility: hidden;
 }
 .formData small {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
 }
 .formData.valid input {
   border-color: #28a745;
@@ -396,8 +393,8 @@ input[data-error]::after {
   background: #c4c4c4;
 }
 .checkbox2-label .checkbox-icon::after {
-  width: 7px;
-  height: 4px;
+  width: 12px;
+  height: 8px;
   border-radius: 2px;
   background: transparent;
   border: 2px solid transparent;
@@ -421,7 +418,7 @@ input[data-error]::after {
 .modal-close:after {
   position: absolute;
   left: 15px;
-  content: ' ';
+  content: '';
   height: 33px;
   width: 3px;
   background-color: #fff;
@@ -436,14 +433,15 @@ input[data-error]::after {
 .btn-signup {
   background: #fe142f;
   display: block;
-  margin: 0 auto;
+  margin: 1rem auto;
   border-radius: 7px;
+  text-transform: capitalize;
   font-size: 1rem;
   padding: 12px;
   color: #fff;
   cursor: pointer;
   border: 0;
-  width: max(50%, 100px);
+  width: max(20%, 170px);
   /* width: 150px; */
   /* width: max(100%, 150px); */
 }
@@ -522,19 +520,9 @@ input[data-error]::after {
   display: block;
   box-shadow: unset;
 }
-/* 
 .hero-content {
-  padding: 51px 67px;
-  grid-column: span 4;
-  background: #232323;
-  color: #fff;
-  position: relative;
-  text-align: left;
-} */
-.hero-content {
-  background: #fff;
   color: #000;
-  padding: 20px;
+  padding: 20px 0;
 }
 .hero-content > * {
   position: relative;
@@ -544,14 +532,13 @@ input[data-error]::after {
   content: unset;
 }
 .hero-headline {
-  /* font-size: 4.5rem; */
-  white-space: normal;
   font-weight: 600;
-  font-size: clamp(1.8rem, 1.6rem + 4vw, 4.5rem);
+  font-size: clamp(1.5rem, 1.3rem + 4vw, 4.5rem);
 }
 .hero-text {
-  width: unset;
-  font-size: 1.5rem;
+  padding: 17px 0 36px;
+  font-size: clamp(0.7rem, 0.6rem + 1.5vw, 1.5rem);
+  font-weight: normal;
 }
 .hero-content .btn-signup {
   display: none;
@@ -561,19 +548,16 @@ input[data-error]::after {
   margin-top: 59px;
 }
 .hero-img img {
-  border-radius: 10px;
-  margin-top: 40px;
-}
-.hero-img img {
-  width: 100%;
-  height: 100%;
   display: block;
+  height: 100%;
+  border-radius: 10px;
   padding: 0;
 }
 .hero-section > .btn-signup {
   display: block;
   margin: 32px auto 10px;
   padding: 12px 35px;
+  font-weight: bold;
 }
 .copyrights {
   color: #fe142f;
@@ -588,25 +572,25 @@ footer {
   padding-right: 2vw;
   margin: 0 20px;
 }
-@media screen and (min-width: 768px) {
-}
 @media screen and (min-width: 980px) {
-  .topnav {
-    flex-wrap: nowrap;
+  .main-navbar {
+    flex-direction: row;
+  }
+  .topnav.responsive .main-navbar {
+    position: static;
+    height: auto;
+    background-color: transparent;
   }
   .topnav a {
     display: block;
     color: #000000;
-    padding: 6px;
-    margin: 5px;
-    text-decoration: none;
     font-size: 1.2rem;
-  }
-  .topnav a:focus-within {
-    display: none;
   }
   .topnav a.icon {
     display: none;
+  }
+  .header-logo {
+    width: 25%;
   }
   .hero-section {
     min-height: 93vh;
@@ -642,14 +626,15 @@ footer {
   }
   .hero-text {
     width: 146%;
+    font-size: 1.5rem;
     font-weight: normal;
-    margin-top: 57px;
+    text-align: justify;
+    margin: 70px 0;
     padding: 0;
   }
   .hero-content .btn-signup {
     display: block;
     outline: none;
-    /* text-transform: capitalize; */
     font-size: 1.3rem;
     padding: 15px 23px;
     margin: 0;
@@ -666,52 +651,6 @@ footer {
     text-align-last: left;
   }
 }
-/* @media screen and (max-width: 980px) {
-  .topnav a {
-    padding: 12px clamp(6px, 5px + 3vw, 12px);
-  }
-  .hero-section {
-    display: block;
-    box-shadow: unset;
-  }
-  .hero-content {
-    background: #fff;
-    color: #000;
-    padding: 20px;
-  }
-  .hero-content::after {
-    content: unset;
-  }
-  .hero-content h1 {
-    font-size: clamp(1.8rem, 1.6rem + 4vw, 4.5rem);
-    font-weight: 600;
-  }
-  .hero-content .btn-signup {
-    display: none;
-  }
-  .hero-headline {
-    font-size: 4.5rem;
-    white-space: normal;
-  }
-  .hero-text {
-    width: unset;
-    font-size: 1.5rem;
-  }
-  .hero-img img {
-    border-radius: 10px;
-    margin-top: 40px;
-  }
-  .hero-section > .btn-signup {
-    display: block;
-    margin: 32px auto 10px;
-    padding: 12px 35px;
-  }
-  .copyrights {
-    margin-top: 50px;
-    text-align: center;
-  }
-} */
-
 @keyframes modalopen {
   from {
     opacity: 0;
