bugFix: good display in FF after submitting min-width of .hero-content

--- a/css/modal.css
+++ b/css/modal.css
@@ -609,7 +609,7 @@ footer {
     color: #fff;
     position: relative;
     text-align: left;
-    /* min-width: 424px; */
+    min-width: 424px;
   }
   .hero-content::after {
     content: '';
