--- a/css/modal.css
+++ b/css/modal.css
@@ -9,23 +9,9 @@
   margin: 0;
   padding: 0;
 }
-/* Landing Page */
-body {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  background: #e5e5e5;
-  font-family: var(--font-default);
-  font-size: 18px;
-  max-width: 1300px;
-  margin: 0 auto;
-}
 a {
   text-decoration: none;
 }
-/* button {
-  border: 0;
-} */
 ul {
   list-style: none;
 }
@@ -39,12 +25,56 @@ img {
   height: auto;
   object-fit: cover;
 }
-.topnav {
-  overflow: hidden;
+/* Mobile first */
+body {
+  margin: 0;
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  flex-direction: column;
+  background: #e5e5e5;
+  font-family: var(--font-default);
+  font-size: 18px;
+  max-width: 1300px;
+  margin: 0 auto;
 }
+/* Landing Page */
+main {
+  font-size: 130%;
+  font-weight: bolder;
+  color: black;
+  padding: 0.5vw 2vw 0;
+  margin: 1vw 3vw;
+  border-radius: 2rem;
+}
+.hero-section {
+  display: block;
+  box-shadow: unset;
+}
+.hero-content {
+  padding: 20px 0;
+}
+.hero-content::after {
+  content: unset;
+}
+.hero-content > * {
+  position: relative;
+  z-index: 1;
+}
+.hero-headline {
+  font-weight: 600;
+  font-size: clamp(1.5rem, 1.3rem + 4vw, 4.5rem);
+}
+.hero-text {
+  padding: 17px 0 36px;
+  font-size: clamp(0.7rem, 0.6rem + 1.5vw, 1.5rem);
+  font-weight: normal;
+}
+.hero-img img {
+  display: block;
+  height: 100%;
+  border-radius: 10px;
+  padding: 0;
+}
+/* Header */
 .header-logo {
   margin: 3.5%;
   margin-bottom: 0;
@@ -54,10 +84,16 @@ img {
   flex-direction: column;
   margin: 3.5%;
 }
+.topnav {
+  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
 .topnav a {
   width: fit-content;
   display: none;
-  color: #000000;
+  color: black;
   text-align: center;
   padding: 0.75rem;
   margin: 5px;
@@ -68,8 +104,8 @@ img {
 .topnav a:hover,
 .topnav a:focus,
 .topnav a.active {
-  background-color: #ff0000;
-  color: #ffffff;
+  background-color: red;
+  color: white;
   border-radius: 10px;
 }
 .topnav a:not(a.icon):hover::after,
@@ -83,7 +119,7 @@ img {
   bottom: 8px;
   width: 85%;
   margin: 0 auto;
-  background-color: #fff;
+  background-color: white;
 }
 .topnav a.icon {
   display: block;
@@ -103,11 +139,10 @@ img {
   left: 0;
   right: 0;
   z-index: 10;
-  height: calc(100vh - 6rem);
-  padding-bottom: 1rem;
   background-color: rgba(50, 50, 50, 97%);
   border-radius: 0.5rem;
   overflow-y: auto;
+  padding: clamp(1rem, 1rem + 2vw, 2rem);
 }
 .topnav.responsive a {
   display: flex;
@@ -120,56 +155,96 @@ img {
   background-color: red;
   border-radius: 0.5rem;
 }
-main {
-  font-size: 130%;
-  font-weight: bolder;
-  color: black;
-  padding: 0.5vw 2vw 0;
-  margin: 1vw 3vw;
-  border-radius: 2rem;
-}
-/* .modal-btn {
-  font-size: 145%;
-  background: #fe142f;
-  display: flex;
-  margin: auto;
-  padding: 2em;
-  color: #fff;
-  padding: 0.75rem 2.5rem;
-  border-radius: 1rem;
-  cursor: pointer;
-} */
-.modal-btn:hover {
-  background: #3876ac;
-}
-.footer {
-  margin: 20px;
-  padding: 10px;
-  font-family: var(--font-slab);
-}
 /* Modal form */
-.button {
-  background: #fe142f;
-  margin-top: 0.5em;
-  padding: 1em;
-  color: #fff;
-  border-radius: 15px;
+.modal-close {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  width: 32px;
+  height: 32px;
+  opacity: 1;
   cursor: pointer;
+  transform: scale(0.7);
+}
+.modal-close:before,
+.modal-close:after {
+  position: absolute;
+  left: 15px;
+  content: '';
+  height: 33px;
+  width: 3px;
+  background-color: white;
+}
+.modal-close:before {
+  transform: rotate(45deg);
+}
+.modal-close:after {
+  transform: rotate(-45deg);
+}
+.button {
+  display: block;
+  background: #fe142f;
+  color: white;
   font-size: 16px;
+  text-transform: capitalize;
+  border: 0;
+  border-radius: 8px;
+  cursor: pointer;
 }
 .button:hover {
   background: #3876ac;
 }
+.hero-section > .btn-signup {
+  display: block;
+  margin: 32px auto 10px;
+  padding: 12px 30px;
+  font-weight: bold;
+}
+.hero-content .btn-signup {
+  display: none;
+  margin: 0;
+  margin-top: 59px;
+  padding: 11px 30px;
+  font-size: 1.5rem;
+}
+.btn-submit {
+  text-transform: none;
+  margin: 1rem auto;
+  padding: clamp(0.3rem, 0.3rem + 2vw, 1rem) clamp(2rem, 1.8rem + 2vw, 3.5rem);
+  width: max(45%, 160px);
+}
+/* Modal */
 .modal {
   display: none;
-  /* position: fixed;
-  z-index: 1;
-  left: 0;
+}
+.modal-mask {
+  position: fixed;
   top: 0;
+  left: 0;
   height: 100%;
   width: 100%;
+  z-index: 10;
   overflow: auto;
-  background-color: rgba(26, 39, 156, 0.4); */
+  background-color: rgba(26, 39, 156, 0.4);
+}
+.modal-content {
+  margin: 2.5% auto;
+  width: 100%;
+  max-width: 500px;
+  height: fit-content;
+  padding-top: 10px;
+  background: #232323;
+  border-radius: 8px 8px 0 0;
+  box-shadow: 8px 12px 12px rgba(0, 0, 0, 0.25);
+  z-index: 11;
+  position: absolute;
+  top: 7rem;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  color: white;
+  animation-name: modalopen;
+  animation-duration: var(--modal-duration);
 }
 .modal-header {
   display: flex;
@@ -182,40 +257,11 @@ main {
   font-size: 1.2em;
   display: none;
 }
-.modal-content {
-  margin: 2.5% auto;
-  width: 100%;
-  max-width: 500px;
-  height: fit-content;
-  /* margin: .5rem auto; */
-  padding-top: 10px;
-  background: #232323;
-  border-radius: 8px 8px 0 0;
-  box-shadow: 8px 12px 12px rgba(0, 0, 0, 0.25);
-  z-index: 11;
-  position: absolute;
-  top: 7rem;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  color: #fff;
-  animation-name: modalopen;
-  animation-duration: var(--modal-duration);
-}
-.modal-mask {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  z-index: 10;
-  overflow: auto;
-  background-color: rgba(26, 39, 156, 0.4);
-}
 .modal-body {
   padding: 15px 8%;
   margin: 15px auto;
 }
+/* Modal Form */
 label {
   font-family: var(--font-default);
   font-size: 15px;
@@ -224,6 +270,8 @@ label {
   margin-bottom: 11px;
 }
 p.text-label {
+  font-weight: normal;
+  font-size: 16px;
   padding: 0.5vw 0;
 }
 input {
@@ -247,14 +295,14 @@ input {
   border-color: #28a745;
 }
 .formData.invalid input {
-  border-color: #f00;
+  border-color: red;
 }
 .formData.valid i.fa-check-circle {
   color: #28a745;
   visibility: visible;
 }
 .formData.invalid i.fa-exclamation-circle {
-  color: #f00;
+  color: red;
   visibility: visible;
 }
 .formData.invalid i.fa-check-circle {
@@ -262,14 +310,9 @@ input {
 }
 .formData.invalid small {
   font-size: 0.8rem;
-  color: #f00;
+  color: red;
   visibility: visible;
 }
-/* input:valid {
-  background-color: #ddffdd;
-  border: 2px solid #fe142f;
-} */
-
 .text-control {
   margin: 0;
   padding: 8px;
@@ -278,29 +321,6 @@ input {
   font-size: 20px;
   height: 48px;
 }
-/* .formData[data-error]::after {
-  content: attr(data-error);
-  font-size: 0.6em;
-  color: #e54858;
-  display: block;
-  margin-top: 7px;
-  margin-bottom: 7px;
-  text-align: left;
-  line-height: 1.3;
-  opacity: 0;
-  transition: 0.3s;
-}
-.formData[data-error-visible='true']::after {
-  opacity: 1;
-}
-.formData[data-error-visible='true'] .text-control {
-  border: 2px solid #e54858;
-}
-input[data-error]::after {
-  content: attr(data-error);
-  font-size: 0.6em;
-  color: red;
-} */
 .checkbox-input {
   display: none;
 }
@@ -316,7 +336,6 @@ input[data-error]::after {
   display: block;
   width: 20px;
   height: 20px;
-  /* text-indent: 29px; */
   white-space: nowrap;
   position: absolute;
   left: -30px;
@@ -373,55 +392,16 @@ input[data-error]::after {
 .checkbox-input:checked + .checkbox2-label .checkbox-icon::after {
   opacity: 1;
 }
-.modal-close {
-  position: absolute;
-  right: 15px;
-  top: 15px;
-  width: 32px;
-  height: 32px;
-  opacity: 1;
-  cursor: pointer;
-  transform: scale(0.7);
-}
-.modal-close:before,
-.modal-close:after {
-  position: absolute;
-  left: 15px;
-  content: '';
-  height: 33px;
-  width: 3px;
-  background-color: #fff;
-}
-.modal-close:before {
-  transform: rotate(45deg);
-}
-.modal-close:after {
-  transform: rotate(-45deg);
-}
-.btn-submit,
-.btn-signup {
-  background: #fe142f;
-  display: block;
-  margin: 1rem auto;
-  border-radius: 7px;
-  text-transform: capitalize;
-  font-size: 1rem;
-  padding: 12px;
-  color: #fff;
-  cursor: pointer;
-  border: 0;
-  width: max(20%, 170px);
-}
-.btn-submit {
-  text-transform: none;
-}
+/* Success Modal */
 .successModal {
   display: none;
   height: 100%;
 }
+.successModal .modal-mask {
+  z-index: 20;
+}
 .successModal .modal-content {
   position: absolute;
-  /* margin: 1rem auto; */
   z-index: 21;
   height: 100vh;
   overflow-y: hidden;
@@ -430,9 +410,6 @@ input[data-error]::after {
   right: 0;
   bottom: 0;
   border-radius: 8px 8px 0 0;
-}
-.successModal .modal-mask {
-  z-index: 20;
 }
 .successModal .modal-body {
   height: 100%;
@@ -455,108 +432,11 @@ input[data-error]::after {
   margin-top: auto;
   margin-bottom: 20px;
 }
-/* custom select styles */
-.custom-select {
-  position: relative;
-  font-family: Arial;
-  font-size: 1.1rem;
-  font-weight: normal;
-}
-.custom-select select {
-  display: none;
-}
-.select-selected {
-  background-color: #fff;
-}
-/* Style the arrow inside the select element: */
-.select-selected:after {
-  position: absolute;
-  content: '';
-  top: 10px;
-  right: 13px;
-  width: 11px;
-  height: 11px;
-  border: 3px solid transparent;
-  border-bottom-color: #f00;
-  border-left-color: #f00;
-  transform: rotate(-48deg);
-  border-radius: 5px 0 5px 0;
-}
-/* Point the arrow upwards when the select box is open (active): */
-.select-selected.select-arrow-active:after {
-  transform: rotate(135deg);
-  top: 13px;
-}
-.select-items div,
-.select-selected {
-  color: #000;
-  padding: 11px 16px;
-  border: 1px solid transparent;
-  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
-  cursor: pointer;
-  border-radius: 8px;
-  height: 48px;
-}
-/* Style items (options): */
-.select-items {
-  position: absolute;
-  background-color: #fff;
-  top: 89%;
-  left: 0;
-  right: 0;
-  z-index: 99;
-}
-.select-items div:hover,
-.same-as-selected {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-/* custom select end */
-.text-label {
-  font-weight: normal;
-  font-size: 16px;
-}
-.hero-section {
-  display: block;
-  box-shadow: unset;
-}
-.hero-content {
-  color: #000;
-  padding: 20px 0;
-}
-.hero-content > * {
-  position: relative;
-  z-index: 1;
-}
-.hero-content::after {
-  content: unset;
-}
-.hero-headline {
-  font-weight: 600;
-  font-size: clamp(1.5rem, 1.3rem + 4vw, 4.5rem);
-}
-.hero-text {
-  padding: 17px 0 36px;
-  font-size: clamp(0.7rem, 0.6rem + 1.5vw, 1.5rem);
-  font-weight: normal;
-}
-.hero-content .btn-signup {
-  display: none;
-  font-size: 1.3rem;
-  padding: 15px 23px;
-  margin: 0;
-  margin-top: 59px;
-}
-.hero-img img {
-  display: block;
-  height: 100%;
-  border-radius: 10px;
-  padding: 0;
-}
-.hero-section > .btn-signup {
-  display: block;
-  margin: 32px auto 10px;
-  padding: 12px 35px;
-  font-weight: bold;
+/* Footer */
+footer {
+  padding-left: 2vw;
+  padding-right: 2vw;
+  margin: 0 20px;
 }
 .copyrights {
   color: #fe142f;
@@ -566,11 +446,7 @@ input[data-error]::after {
   font-weight: bolder;
   text-align: center;
 }
-footer {
-  padding-left: 2vw;
-  padding-right: 2vw;
-  margin: 0 20px;
-}
+/* Desktop */
 @media screen and (min-width: 980px) {
   .main-navbar {
     flex-direction: row;
@@ -600,6 +476,9 @@ footer {
     box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
     margin-bottom: 10px;
   }
+  .hero-section > .btn-signup {
+    display: none;
+  }
   .hero-content {
     padding: 51px 67px;
     grid-column: span 4;
@@ -618,6 +497,9 @@ footer {
     right: -80px;
     top: 0;
   }
+  .hero-content .btn-signup {
+    display: block;
+  }
   .hero-headline {
     font-size: 6rem;
     font-weight: normal;
@@ -626,30 +508,20 @@ footer {
   .hero-text {
     width: 146%;
     font-size: 1.5rem;
-    font-weight: normal;
     text-align: justify;
     margin: 70px 0;
     padding: 0;
   }
-  .hero-content .btn-signup {
-    display: block;
-    /* outline: none; */
-    /* font-size: 1.3rem; */
-    /* padding: 15px 23px; */
-    /* margin: 0; */
-    /* margin-top: 59px; */
-  }
   .hero-img {
     grid-column: span 8;
   }
-  .hero-section > .btn-signup {
-    display: none;
-  }
+  /* footer */
   .copyrights {
     margin-top: 60px;
     text-align-last: left;
   }
 }
+/* Animation */
 @keyframes modalopen {
   from {
     opacity: 0;
