--- a/css/modal.css
+++ b/css/modal.css
@@ -405,7 +405,7 @@ input {
 .successModal .modal-content {
   position: absolute;
   z-index: 21;
-  /* height: 100%; */
+  height: 100%;
   overflow-y: hidden;
   top: 12%;
   left: 0;
@@ -415,6 +415,7 @@ input {
 }
 .successModal .modal-body {
   display: flex;
+  height: 100%;
   flex-direction: column;
   align-items: center;
 }
